# Brik-EV

./: .gitignore  CMakeLists.txt  README.md
include/: brik_api.h  brik_error.h  brik_utils.h  connect_mgmt.h  display_handler.h  display_handler_sdl.h  video_handler.h
include/Display/: display.h
include/Packet/: connect_mgmt.h  net_protocol.h  packet_handler.h  packets.h
include/Packet/Handler/: packet_audio.h  packet_cmd.h  packet_video.h
include/Socket/: socket_listener.h
include/System/: error_handler.h  threadqueue.h
include/Video/: decoder.h  frame_handler.h  images.h  video_handler.h
include/sys/: threadqueue.h
lib/config/internet/: dnsmasq.conf
lib/config/udev/: 10-local.rules
lib/internet/: dnsmasq.conf  hostapd.conf
lib/libc6/: libc6_2.23-0ubuntu11_armhf.deb  libc6_2.27-3ubuntu1_armhf.deb
lib/service/: brik.service  brik_airplay.service  brik_network.service
lib/shell/: brik_backup.sh  brik_backup_rootfs.sh  brik_exe.sh  brik_hdmi.sh  brik_network.sh  brik_update.sh  debug.sh  install_package.sh  run.sh
src/: brik.c  brik_error.c  display_handler.c  display_handler_sdl.c  display_handler_sdl2.c  packet_handler.c  video_handler.c
src/Module/: connect_mgmt.c
src/Module/Display/: display.c  display_sdl.c  display_sdl2.c
src/Module/Packet/: connect_mgmt.c  packet_handler.c
src/Module/Packet/Handler/: packet_audio.c  packet_cmd.c  packet_video.c
src/Module/Socket/: socket_listener.c
src/Module/Video/: decoder.c  frame_handler.c  images.c  video_handler.c
src/System/: error_handler.c  sps_parser.c  threadqueue.c
src/sys/: sps_parser.c  threadqueue.c
